HDX-10249 implement Mixpanel analytics for notifications

--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/notification_platform/signup_modal_content.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/notification_platform/signup_modal_content.html
@@ -5,6 +5,8 @@
 
 <form method="post" id="notification-platform-form" novalidate data-module="hdx-form-validator">
   <input type="hidden" name="dataset_id" value="{{ pkg.id }}">
+  <input type="hidden" name="dataset_name" value="{{ pkg.name }}">
+  <input type="hidden" name="popup_source" value="">
 
   {{ h.snippet('bem.blocks/input_field.html',
     type="email",
