--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/base.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/base.html
@@ -30,6 +30,8 @@
           'datasetId': '{% block analytics_dataset_id %}None{% endblock %}',
           'pageTitle': '{% if self.subtitle()|trim %}{{ self.subtitle()|trim }}{% else %} {{ 'None' }} {% endif -%}',
           'datasetAvailability': '{% block analytics_dataset_availability %}None{% endblock %}',
+          'cameFrom': '{% block analytics_came_from %}{% endblock %}',
+          'supportsNotifications': {% block analytics_supports_notifications %}null{% endblock %},
           'authenticated': '{{ "true" if c.userobj else "false" }}'
 
       };
@@ -170,7 +172,7 @@
     {% endblock %}
 
     <link rel=preconnect href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {# render all assets included in styles block #}
     {{ h.render_assets('style') }}
     {%- block custom_styles %}
