--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/bem.blocks/floating_button.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/bem.blocks/floating_button.html
@@ -1,7 +1,9 @@
 <div class="floating-button{% if container_classes %} {{ container_classes|join(' ') }}{% endif %}"
-     {% if modal %}data-bs-toggle="modal" data-bs-target="#{{ modal }}"{% endif %}>
+     {% if modal %}data-bs-toggle="modal" data-bs-target="#{{ modal }}"{% endif %}
+     {% if data_attributes %}{% for key, value in data_attributes.items() %}data-{{ key }}="{{ value }}"
+     {% endfor %}{% endif %}>
   <div class="row align-items-center g-0">
-    <div class="col-auto">
+  <div class="col-auto">
       <div class="floating-button__icon">
         <i class="fa-solid fa-fw fa-{{ icon }}"></i>
       </div>
