--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/bem.blocks/modal.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/bem.blocks/modal.html
@@ -1,6 +1,8 @@
 <div class="bem-modal modal fade{% if spacing_class %} {{ spacing_class }}{% endif %}" id="{{ id }}" tabindex="-1"
-     aria-labelledby="{{ id }}Label" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+     aria-labelledby="{{ id }}Label" aria-hidden="true"
+     {% if data_attributes %}{% for key, value in data_attributes.items() %}data-{{ key }}="{{ value }}"
+     {% endfor %}{% endif %}>
+<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="bem-modal__content modal-content">
       <div class="bem-modal__header modal-header">
         <h6 class="modal-title" id="{{ id }}Label">{{ title }}</h6>
