--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/light/dataset/read.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/light/dataset/read.html
@@ -12,6 +12,8 @@
 {% block analytics_dataset_name %}{{ pkg.name  }}{% endblock %}
 {% block analytics_dataset_id %}{{ pkg.id }}{% endblock %}
 {% block analytics_dataset_availability %}{{ analytics.analytics_dataset_availability }}{% endblock %}
+{% block analytics_came_from %}{{ analytics.analytics_came_from }}{% endblock %}
+{% block analytics_supports_notifications %}{{ analytics.analytics_supports_notifications }}{% endblock %}
 
 {% block links %}
   <link rel="canonical" href="{{ h.hdx_switch_url_path(force=False) }}">
@@ -68,7 +70,7 @@
           </div>
         {% endif %}
         {% if supports_notifications %}
-          {{ h.snippet('notification_platform/action_menu_button.html') }}
+          {{ h.snippet('notification_platform/action_menu_button.html', pkg=pkg) }}
         {% endif %}
         <ul class="nav nav-tabs">
           <li class="nav-item">
