--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/package/snippets/base_actions_menu.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/package/snippets/base_actions_menu.html
@@ -22,7 +22,7 @@
         data-module-link_type="dataset header"
         data-module-just_send_event="false" data-module-selector="#contact-the-contributor">
         {% if supports_notifications %}
-          {{ h.snippet('notification_platform/action_menu_button.html') }}
+          {{ h.snippet('notification_platform/action_menu_button.html', pkg=pkg) }}
         {% endif %}
         {% if c.user %}
             {% if not hide_follow%}
