--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/package/snippets/resource_item.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/package/snippets/resource_item.html
@@ -66,6 +66,8 @@
                  target="_blank"
                  data-resource-id="{{ res.id }}"
                  data-dataset-id="{{ pkg.id }}"
+                 data-dataset-name="{{ pkg.name }}"
+                 data-dataset-supports-notifications="{{ h.hdx_dataset_supports_notifications(pkg.id) }}"
                  data-user-survey-url="{{ pkg.user_survey_url }}"
                  tracking-type="{{res.url_type}}"
               >
