HDX-10238 update CTA buttons

--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/notification_platform/button_and_modals.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/notification_platform/button_and_modals.html
@@ -11,7 +11,7 @@
   container_classes=['notification-platform-opt-in-floating-button', 'd-none'],
   icon="bell",
   data_attributes={"dataset-id": pkg.id, "dataset-name": pkg.name},
-  text=CONST_NOTIFICATION_PLATFORM.OPT_IN_TEXT_FLOATING_BUTTON) }}
+  text=CONST_NOTIFICATION_PLATFORM.OPT_IN_TEXT) }}
 
 {{ h.snippet('bem.blocks/modal.html',
   id="notificationsSignupBemModal",
