--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/datasets/dataset.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/datasets/dataset.css
@@ -121,13 +121,19 @@
 .wrapper-secondary .form-check .form-check-input {
   box-shadow: none;
 }
-.notification-platform-opt-in-action-menu i {
+.notification-platform-opt-in-action-menu {
+  margin-top: -25px;
+  margin-bottom: 5px;
+}
+.notification-platform-opt-in-action-menu a {
   background-color: #007CE1;
   color: #fff;
+  padding: 5px 10px 5px 5px;
+  display: inline-block;
+  border-radius: 5px;
+}
+.notification-platform-opt-in-action-menu a i {
   width: 22px;
   height: 22px;
   line-height: 22px;
-  border-radius: 11px;
-  font-size: 10px;
-  text-align: center;
 }
