--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/datasets/dataset.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/datasets/dataset.less
@@ -153,14 +153,19 @@
 }
 
 .notification-platform-opt-in-action-menu {
-  i {
+  margin-top: -25px;
+  margin-bottom: 5px;
+  a {
     background-color: #007CE1;
     color: #fff;
-    width: 22px;
-    height: 22px;
-    line-height: 22px;
-    border-radius: 11px;
-    font-size: 10px;
-    text-align: center;
+    padding: 5px 10px 5px 5px;
+    display: inline-block;
+    border-radius: 5px;
+
+    i {
+      width: 22px;
+      height: 22px;
+      line-height: 22px;
+    }
   }
 }
