--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/dataset/dataset-light.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/dataset/dataset-light.less
@@ -140,16 +140,7 @@
     margin-left: 0;
   }
   .notification-platform-opt-in-action-menu {
-    display: block;
-    margin-bottom: 1rem;
-    i {
-      width: 18px;
-      height: 18px;
-      line-height: 18px;
-      border-radius: 9px;
-      font-size: 10px;
-      margin-right: 3px;
-    }
+    margin-top: 5px;
   }
 }
 
