--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/package/hdx_read.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/package/hdx_read.html
@@ -94,6 +94,9 @@
                 </div>
               {% endfor %}
             {% endif %}
+            {% if supports_notifications %}
+              {{ h.snippet('notification_platform/action_menu_button.html', pkg=pkg) }}
+            {% endif %}
                 <div class="row mBottom15">
                     <div class="col-12" {% if edit_mode %} data-module="hdx-quick-edit" data-module-anchor="field_notes" data-module-dataset="{{pkg.id}}"{% endif %}>
                         {% if pkg.notes %}
@@ -126,7 +129,7 @@
                 <ul class="float-start dataset-resources ">
                     {% snippet 'search/snippets/package_icons.html', package=pkg%}
                 </ul>
-                {% snippet "package/snippets/package_actions_menu.html", pkg = pkg, membership=membership, is_indicator=False, supports_notifications=supports_notifications, classes='base-actions-menu followButtonContainer float-end' %}
+                {% snippet "package/snippets/package_actions_menu.html", pkg = pkg, membership=membership, is_indicator=False, classes='base-actions-menu followButtonContainer float-end' %}
                 {% if pkg.dataseries_name %}
                   <div class="dataseries-info">{{_('This dataset is part of the data series')}} <span class="dataseries-explanation" title="{{ _('A data series is a collection of datasets that has a shared topic usually provided by a single organization') }}" data-module="bs_tooltip" data-bs-toggle="tooltip">[?]</span>: <a href="{% url_for 'search', dataseries_name=pkg.dataseries_name %}" data-module="hdx_click_stopper" data-module-link_type="dataseries dataset page">{{ pkg.dataseries_name }}</a></div>
                 {% endif %}
