HDXDPT-1119 display alerts on light pages

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/light/page-light.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/light/page-light.css
@@ -4257,6 +4257,9 @@ label.terms-of-service:after {
     width: 40px;
   }
 }
+.flash-messages {
+  background-color: unset;
+}
 .mobile-carousel {
   display: none;
 }
