--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/page_light.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/page_light.html
@@ -73,6 +73,25 @@
       </div>
       {% endblock %}
 
+      {% block flash %}
+        <div class="dataset-light">
+          <div class="container">
+            <div class="flash-messages">
+              {% block flash_inner %}
+                {% for category, message in h.get_flashed_messages(with_categories=true) %}
+                  {% if loop.first %}
+                    <div class="pt-3"></div>
+                  {% endif %}
+                  <div class="alert alert-dismissible fade show {{ category }}">
+                    {{ h.literal(message) }}
+                  </div>
+                {% endfor %}
+              {% endblock %}
+            </div>
+          </div>
+        </div>
+      {% endblock %}
+
       {%- block content %}
       {% endblock -%}
 
