--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/country/country.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/country/country.html
@@ -9,6 +9,11 @@
     {{ data.country_dict.display_name }}
 {% endblock %}
 
+{% block links %}
+  <link rel="alternate" media="{{ h.HDX_CONST('MOBILE_MEDIA') }}" href="{{ h.hdx_switch_url_path(force=False) }}">
+  {{ super() }}
+{% endblock %}
+
 {% block crisis_map %}
     {% block crisis_actions %}
     {% endblock %}
