--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/light/organization/index.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/light/organization/index.html
@@ -6,6 +6,11 @@
     {% asset 'hdx_theme/organizations-styles' %}
 {% endblock %}
 
+{% block links %}
+  <link rel="canonical" href="{{ h.hdx_switch_url_path(force=False) }}">
+  {{ super() }}
+{% endblock %}
+
 {% set logged_in = true if c.userobj else false %}
 {% set is_sys_admin = c.userobj.sysadmin %}
 {% block subtitle %}{{ _('Organisations') }}{% endblock %}
