--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/organization/index.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/organization/index.html
@@ -3,6 +3,11 @@
 {% set is_sys_admin = c.userobj.sysadmin %}
 {% block subtitle %}{{ _('Organisations') }}{% endblock %}
 
+{% block links %}
+  <link rel="alternate" media="{{ h.HDX_CONST('MOBILE_MEDIA') }}" href="{{ h.hdx_switch_url_path(force=False) }}">
+  {{ super() }}
+{% endblock %}
+
 {% block breadcrumb_content %}
 <li class="breadcrumb-item active">{% link_for _('Organisations'), controller='organization', action='index' %}</li>
 {% endblock %}
