--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/datasets/dataset.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/datasets/dataset.css
@@ -122,18 +122,29 @@
   box-shadow: none;
 }
 .notification-platform-opt-in-action-menu {
+  cursor: pointer;
+  background-color: #007CE1;
+  display: inline-block;
+  padding: 7px;
+  border-radius: 22px;
   margin-top: -25px;
   margin-bottom: 15px;
 }
-.notification-platform-opt-in-action-menu a {
-  background-color: #007CE1;
-  color: #fff;
-  padding: 5px 10px 5px 5px;
-  display: inline-block;
-  border-radius: 5px;
+.notification-platform-opt-in-action-menu .icon {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 18px;
+  color: #007CE1;
+  background-color: #fff;
 }
-.notification-platform-opt-in-action-menu a i {
-  width: 22px;
-  height: 22px;
-  line-height: 22px;
+.notification-platform-opt-in-action-menu .paragraph {
+  font-size: 14px;
+  color: #fff;
+  max-width: 240px;
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 1.05;
 }
