--- a/ckanext-hdx_theme/ckanext/hdx_theme/templates/notification_platform/action_menu_button.html
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/templates/notification_platform/action_menu_button.html
@@ -1,7 +1,16 @@
 {% set CONST_NOTIFICATION_PLATFORM = h.HDX_CONST('UI_CONSTANTS')['NOTIFICATION_PLATFORM'] %}
 
-<div class="notification-platform-opt-in-action-menu d-none">
-  <a href="#" data-dataset-id="{{ pkg.id }}" data-dataset-name="{{ pkg.name }}">
-    <i class="fa-solid fa-fw fa-bell"></i> <span>{{ CONST_NOTIFICATION_PLATFORM.OPT_IN_TEXT }}</span>
-  </a>
+<div class="notification-platform-opt-in-action-menu d-none" data-dataset-id="{{ pkg.id }}" data-dataset-name="{{ pkg.name }}">
+  <div class="row align-items-center g-0">
+  <div class="col-auto">
+      <div class="icon">
+        <i class="fa-solid fa-fw fa-bell"></i>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="paragraph">
+        <p class="mb-0">{{ CONST_NOTIFICATION_PLATFORM.OPT_IN_TEXT }}</p>
+      </div>
+    </div>
+  </div>
 </div>
